# climem

./: CM_GUIDE.md  Cargo.toml  README.md  config.json
.claude/skills/rust-refactor/: SKILL.md
memory/: .init-manifest.json  config.json
memory/imports/: HOWTO-BUILD-MEMORY.md  HOWTO-BUILD-MEMORY.md.meta.json  README-02cc5e36.md  README-065dd955.md  README-065dd955.md.meta.json  README-1c43d45d.md  README.md  RULES.md  RULES.md.meta.json  add-command.md  add-command.md.meta.json  add-embedding-provider.md  add-embedding-provider.md.meta.json  add-import-format.md  add-import-format.md.meta.json  build.md  build.md.meta.json  code-style.md  code-style.md.meta.json  conventions.md  conventions.md.meta.json  decisions.md  decisions.md.meta.json  journal-ab58d112.md  journal-ab58d112.md.meta.json  known-issues.md  known-issues.md.meta.json  overview.md  overview.md.meta.json  roadmap.md  roadmap.md.meta.json  structure.md  structure.md.meta.json  writing-code.md  writing-code.md.meta.json
memory/notes/: 03a417e3.md  64ca420a.md  6561c043.md  9fe25f2c.md  a5080c8c.md  aa421674.md  b762f14a.md  e7fe2910.md  eefaa916.md  f8374095.md  fdd4353a.md
src/: chunk.rs  cli.rs  code.rs  commands.rs  config.rs  deinit.rs  doctor.rs  export.rs  graph.rs  help.rs  import.rs  init.rs  main.rs  note.rs  output.rs  search.rs  store.rs  util.rs
src/embed/: api.rs  hashing.rs  mod.rs
